--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <ul class="wrapped-content">
                 <li>
                     <div>
-                        <img src="/assets/img/logo.png" alt="logo">
+                        <img src="./assets/img/logo.png" alt="logo">
                     </div>
                 </li>
 
