prueba de ruta de imagenes

--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+     <link rel="stylesheet" href="/assets/reset.css">
     <link rel="stylesheet" href="/assets/styles.css">
-    <link rel="stylesheet" href="/assets/reset.css">
+   
     <!-- Font Awesome CDN -->
     <script defer src="https://use.fontawesome.com/releases/v5.0.10/js/all.js" integrity="sha384-slN8GvtUJGnv6ca26v8EzVaR9DC58QEwsIk9q1QXdCU8Yu8ck/tL/5szYlBbqmS+" crossorigin="anonymous"></script>
     <title>The Fox</title>
@@ -15,10 +16,10 @@
 <body>
     <header>
         <nav class="grid-wrapper">
-            <ul class="wrapped-content">
+            <ul class="wrapped">
                 <li>
                     <div>
-                        <img src="./assets/img/logo.png" alt="logo">
+                        <img src="/DarielGonzalez.github.io/assets/img/logo.png" alt="logo">
                     </div>
                 </li>
 
@@ -48,10 +49,75 @@
                 </li>
             </ul>
         </nav>
-   <div class="img-info">
-
+   <div class=" content-col content-justified img-info">
+        <div class="grid-wrapper">
+            <div class="wrapped content-col">
+                    <h1>WE ARE ALWAYS WORKING HARD TO<br><span> BUILD AWESOME WORK</span></h1>
+                    <div class="linea">
+                        <div class="linea-azul"></div>
+                    </div>
+                    <ol>
+                        <li><i class="fas fa-check"></i> <p> Fully Responsive</p></li>
+                        <li><i class="fas fa-check"></i> <p>Retina Ready</p> </li>
+                        <li> <i class="fas fa-check"></i> <p> Extremely Customizable </p></li>
+                        <li> <i class="fas fa-check"></i> <p>WP 3.9+ Ready</p></li>                
+                    </ol>
+                    <a class="btn btn-secondary" href=""> BUY IT NOW</a>
+            </div>
+        </div>
    </div>
     </header>
+    <main>
+        <section class="grid-wrapper ">
+            <div class="wrapped content">
+                <div class="content-col content-justified">
+                    <h2>Hello!</h2>
+                    <p class="content-right">Welcome to ThemeForest! Read our Getting Started Guide, visit the Blog for recent news and make yourself at home! You can find information
+                        about ThemeFores in our Knowledgebase.</p>
+                    <h3> WordPress Drag &amp; Drop Page Themes</h3>
+                    <p><div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate expedita tempore facilis in quidem corporis quibusdam molestiae optio neque aliquam doloremque reprehenderit reiciendis iste ea molestias nobis, nemo facere deleniti.</div></p>
+                    <a href="#" class="btn btn-primary">VIEW DETAIL</a>
+                </div>
+                  <div class="content-col">
+                    <div class="accordion">
+                        <div class="accordion-left">                            
+                            <h3>Web Design Service</h3>
+                        </div>
+                        <div class="accordion-right">
+                            <i class="fas fa-angle-down"></i>
+                        </div>
+                        
+                    </div>
+                    <div class="accordion">
+                        <div class="accordion-left">
+                            <h3>Creative Service</h3>                            
+                        </div>
+                        <div class="accordion-right"><i class="fas fa-angle-up"></i></div>
+                        <div class="accordion-body">
+                            <img src="assets/img/Rectangle.png" alt="">
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos debitis fuga dignissimos vitae impedit exercitationem! Aperiam dolore dignissimos nemo odit iste, consectetur deserunt nam quis, libero expedita placeat, iure aut?</p>
+                        </div>
+                    </div>
+                    <div class="accordion">
+                        <div class="accordion-left">
+                            <h3>SEO Solutions Service</h3>
+                        </div>
+                        <div class="accordion-right">
+                            <i class="fas fa-angle-down"></i>
+                        </div>                        
+                    </div>
+                    <div class="accordion">
+                        <div class="accordion-left">
+                            <h3>Graphic Design Service</h3>
+                        </div>
+                            <div class="accordion-right">
+                                <i class="fas fa-angle-down"></i>
+                            </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 
     <script src="/assets/main.js"></script>
 </body>
